--- a/src/main/resources/net/customware/confluence/plugin/menumanager/text.properties
+++ b/src/main/resources/net/customware/confluence/plugin/menumanager/text.properties
@@ -25,6 +25,8 @@ menumanager.details.plugin = Plugin
 menumanager.details.link = Link
 
 menumanager.config.update = Save Changes
+menumanager.web-section.label=Menu Manager
+menumanager.web-item.label=Configuration
 
 # Errors
 menumanager.error.invalidSection = The web item ''{0}'' is pointing to a non-existent location: {1}
