--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>net.customware.confluence.plugin.menumanager</groupId>
     <artifactId>menu-manager-plugin</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.0-SNAPSHOT</version>
     <packaging>atlassian-plugin</packaging>
 
     <name>Menu Manager</name>
@@ -24,8 +24,8 @@
     </description>
 
     <scm>
-        <connection>scm:git:ssh://git@github.com:ServiceRocket/menu-manager.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:ServiceRocket/menu-manager.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com/ServiceRocket/menu-manager.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/ServiceRocket/menu-manager.git</developerConnection>
         <url>https://github.com/ServiceRocket/menu-manager</url>
         <tag>HEAD</tag>
     </scm>
