--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -7,12 +6,12 @@
         <groupId>com.servicerocket</groupId>
         <artifactId>servicerocket-oss</artifactId>
         <version>5</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>net.customware.confluence.plugin.menumanager</groupId>
     <artifactId>menu-manager-plugin</artifactId>
-    <version>3.4.0-SNAPSHOT</version>
+    <version>3.4.0</version>
     <packaging>atlassian-plugin</packaging>
 
     <name>Menu Manager</name>
@@ -27,7 +26,7 @@
         <connection>scm:git:ssh://git@github.com/ServiceRocket/menu-manager.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/ServiceRocket/menu-manager.git</developerConnection>
         <url>https://github.com/ServiceRocket/menu-manager</url>
-        <tag>HEAD</tag>
+        <tag>3.4.0</tag>
     </scm>
 
     <repositories>
@@ -177,7 +176,7 @@
                             com.atlassian.plugin;version="3",
                             *;resolution:=optional
                         </Import-Package>
-                        <CONF_COMM/>
+                        <CONF_COMM />
                     </instructions>
                     <testGroups>
                         <testGroup>
